// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shows a facets tab 1`] = `
<nav
  className="sc-bdnylx jiVbiK secondaryNav"
>
  <span />
  <ul
    className="sc-gtssRu hcdlKW"
  >
    <li
      className="sc-jSFkmK khFzSJ"
    >
      <a
        className="sc-gKAblj kyKRjX"
        href="/r/foo"
        onClick={[Function]}
      >
        Logs
      </a>
    </li>
    <li
      className="sc-jSFkmK khFzSJ"
    >
      <a
        className="sc-gKAblj kyKRjX secondaryNavLink--alerts "
        href="/r/foo/alerts"
        onClick={[Function]}
      >
        Alerts
      </a>
    </li>
    <li
      className="sc-jSFkmK khFzSJ"
    >
      <a
        className="sc-gKAblj kyKRjX tabLink isSelected"
        href="/r/foo/facets"
        onClick={[Function]}
      >
        Facets
      </a>
    </li>
  </ul>
</nav>
`;

exports[`shows error pane 1`] = `
<nav
  className="sc-bdnylx jiVbiK secondaryNav"
>
  <span />
  <ul
    className="sc-gtssRu hcdlKW"
  >
    <li
      className="sc-jSFkmK khFzSJ"
    >
      <a
        className="sc-gKAblj kyKRjX"
        href="/r/foo"
        onClick={[Function]}
      >
        Logs
      </a>
    </li>
    <li
      className="sc-jSFkmK khFzSJ"
    >
      <a
        className="sc-gKAblj kyKRjX secondaryNavLink--alerts isSelected"
        href="/r/foo/alerts"
        onClick={[Function]}
      >
        Alerts
      </a>
    </li>
  </ul>
</nav>
`;

exports[`shows logs 1`] = `
<nav
  className="sc-bdnylx jiVbiK secondaryNav"
>
  <span />
  <ul
    className="sc-gtssRu hcdlKW"
  >
    <li
      className="sc-jSFkmK khFzSJ"
    >
      <a
        className="sc-gKAblj kyKRjX isSelected"
        href="/r/foo"
        onClick={[Function]}
      >
        Logs
      </a>
    </li>
    <li
      className="sc-jSFkmK khFzSJ"
    >
      <a
        className="sc-gKAblj kyKRjX secondaryNavLink--alerts "
        href="/r/foo/alerts"
        onClick={[Function]}
      >
        Alerts
      </a>
    </li>
  </ul>
</nav>
`;

exports[`shows the number of errors in the error tab 1`] = `
<nav
  className="sc-bdnylx jiVbiK secondaryNav"
>
  <span />
  <ul
    className="sc-gtssRu hcdlKW"
  >
    <li
      className="sc-jSFkmK khFzSJ"
    >
      <a
        className="sc-gKAblj kyKRjX"
        href="/r/foo"
        onClick={[Function]}
      >
        Logs
      </a>
    </li>
    <li
      className="sc-jSFkmK khFzSJ"
    >
      <a
        className="sc-gKAblj kyKRjX secondaryNavLink--alerts isSelected"
        href="/r/foo/alerts"
        onClick={[Function]}
      >
        Alerts
        <div
          className="sc-iCoHVE lobeSd"
        >
          27
        </div>
      </a>
    </li>
  </ul>
</nav>
`;
